skill html added

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eddy Website</title>
 
-    <link rel="shortcut icon" href="./images/logo.png">
+    <link rel="shortcut icon" href="./images/logo2.png">
 
     <!-- Google Fonts style -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -33,114 +33,42 @@
     </nav>
     <div id="header">
         <div class="container">
-            <div class="header-text">
-                <p>HI! I'M</p>
-                <h1>Eddy<br>CHAN</h1>
-                <p>WEB DESIGNER / UX DESIGNER</p>
-            </div>
-        </div>
-    </div>
-    <!------------------------------------about----------------------------------->
-    <div id="about">
-        <div class="container">
-            <div class="row">
-                <div class="about-col-1">
-                    <img src="./images/remove.png">
-                </div>
-                <div class="about-col-2">
-                    <h1 class="sub-title">About Me</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam molestias quo debitis velit.
-                        Minus, error? Dolore et exercitationem, autem cumque ipsa aperiam quod, laboriosam voluptas
-                        aliquid, illo voluptatibus assumenda unde!</p>
-                    <br><br>
-                    <div class="tab">
-                        <div class="tab-titles">
-                            <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
-                            <p class="tab-links" onclick="opentab('experience')">Experience</p>
-                            <p class="tab-links" onclick="opentab('education')">Education</p>
-                        </div>
-                        <div class="tab-contents active-tab" id="skills">
-                            <ul>
-                                <li><span>Web Design</span><br>Designing Web Interfaces</li>
-                                <li><span>Web Design</span><br>Designing Web Interfaces</li>
-                                <li><span>Web Design</span><br>Designing Web Interfaces</li>
-
-                            </ul>
-                        </div>
-                        <div class="tab-contents" id="experience">
-                            <ul>
-                                <li>
-                                    <span>2023 - Current</span><br>Web Designer at Autoshop Solutions
-                                </li>
-                                <li>
-                                    <span>2023 - Current</span><br>Web Designer at Autoshop Solutions
-                                </li>
-                                <li>
-                                    <span>2023 - Current</span><br>Web Designer at Autoshop Solutions
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="tab-contents" id="education">
-                            <ul>
-                                <li>
-                                    <span>2023</span><br>Associate in UX Design
-                                </li>
-                                <li>
-                                    <span>2023</span><br>Associate in Web Design
-                                </li>
-
-                                <li>
-                                    <span>2017</span><br>Associate in Business Administration
-                                </li>
-
-                            </ul>
-                        </div>
+            <div class="header-content">
+                <div class="header-text">
+                    <div class="moblie-icon">
+                        <img src="./images/me.png" alt="logo-myself">
                     </div>
-                    <a href="#" download class="btn btn2">BUTTON</a>
+                    <p>HI! I'M</p>
+                    <h1>Eddy<br>CHAN</h1>
+                    <p>WEB DESIGNER / UX DESIGNER</p>
+
+
+                </div>
+                <div class="header-img">
+                    <img src="./images/me.png" alt="logo-myself">
                 </div>
             </div>
         </div>
-
     </div>
 
-
-    <!----------------------------portfolio--------------------------------------------->
+    <!----------------------------Quotes--------------------------------------------->
 
     <div id="portfolio">
         <div class="container">
-            <h1 class="sub-title">Portfolio</h1>
+            <h1 class="sub-title">Quotes</h1>
             <div class="work-list">
                 <div class="work">
+
                     <img src="./images/bgc2.png">
                     <div class="layer">
                         <h3>test1</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos molestiae ab omnis quam
-                            perferendis? Libero incidunt harum officiis explicabo cumque. Hic, voluptates? Sunt illo ad
+                            perferendis? Libero incidunt harum officiis explicabo cumque. Hic, voluptates? Sunt illo
+                            ad
                             vero, nesciunt odio laudantium qui.</p>
                         <a href="#"><i class="fa-sharp fa-solid fa-link"></i></a>
                     </div>
                 </div>
-                <div class="work">
-                    <img src="./images/bgc2.png">
-                    <div class="layer">
-                        <h3>test2</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos molestiae ab omnis quam
-                            perferendis? Libero incidunt harum officiis explicabo cumque. Hic, voluptates? Sunt illo ad
-                            vero, nesciunt odio laudantium qui.</p>
-                        <a href="#"><i class="fa-sharp fa-solid fa-link"></i></a>
-                    </div>
-                </div>
-                <div class="work">
-                    <img src="./images/bgc2.png">
-                    <div class="layer">
-                        <h3>test3</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos molestiae ab omnis quam
-                            perferendis? Libero incidunt harum officiis explicabo cumque. Hic, voluptates? Sunt illo ad
-                            vero, nesciunt odio laudantium qui.</p>
-                        <a href="#"><i class="fa-sharp fa-solid fa-link"></i></a>
-                    </div>
-                </div>
-
             </div>
             <a href="#" class="btn">SEE MORE</a>
         </div>
