--- a/skill.html
+++ b/skill.html
@@ -31,20 +31,83 @@
         </ul>
         <i class="fas fa-solid fa-bars" onclick="openmenu()"></i>
     </nav>
+    <section id="skill">
+        <div class="inner">
+            <div class="skill-header">
+                <h1>First H1</h1>
+            </div>
+            <div class="skill-container">
+                <div class="skill-box">
+                    <div class="skill-title">
+                        <div class="skill-img">
+                            <img src="./images/bgc-9.png" alt="skill1" class="skill-icon">
+                        </div>
+                        <h3>HTML 5</h3>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus a voluptatibus veniam at eaque
+                        quos voluptatem tempora nisi aperiam quaerat repudiandae ut, dignissimos maiores, ducimus
+                        qui esse corrupti, fugiat quidem.</p>
+                </div>
+                <div class="skill-box">
+                    <div class="skill-title">
+                        <div class="skill-img">
+                            <img src="./images/bgc-9.png" alt="skill1" class="skill-icon">
+                        </div>
+                        <h3>HTML 5</h3>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus a voluptatibus veniam at eaque
+                        quos voluptatem tempora nisi aperiam quaerat repudiandae ut, dignissimos maiores, ducimus
+                        qui esse corrupti, fugiat quidem.</p>
+                </div>
+                <div class="skill-box">
+                    <div class="skill-title">
+                        <div class="skill-img">
+                            <img src="./images/bgc-9.png" alt="skill1" class="skill-icon">
+                        </div>
+                        <h3>HTML 5</h3>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus a voluptatibus veniam at eaque
+                        quos voluptatem tempora nisi aperiam quaerat repudiandae ut, dignissimos maiores, ducimus
+                        qui esse corrupti, fugiat quidem.</p>
+                </div>
+                <div class="skill-box">
+                    <div class="skill-title">
+                        <div class="skill-img">
+                            <img src="./images/bgc-9.png" alt="skill1" class="skill-icon">
+                        </div>
+                        <h3>HTML 5</h3>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus a voluptatibus veniam at eaque
+                        quos voluptatem tempora nisi aperiam quaerat repudiandae ut, dignissimos maiores, ducimus
+                        qui esse corrupti, fugiat quidem.</p>
+                </div>
+                <div class="skill-box">
+                    <div class="skill-title">
+                        <div class="skill-img">
+                            <img src="./images/bgc-9.png" alt="skill1" class="skill-icon">
+                        </div>
+                        <h3>HTML 5</h3>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus a voluptatibus veniam at eaque
+                        quos voluptatem tempora nisi aperiam quaerat repudiandae ut, dignissimos maiores, ducimus
+                        qui esse corrupti, fugiat quidem.</p>
+                </div>
+                <div class="skill-box">
+                    <div class="skill-title">
+                        <div class="skill-img">
+                            <img src="./images/bgc-9.png" alt="skill1" class="skill-icon">
+                        </div>
+                        <h3>HTML 5</h3>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus a voluptatibus veniam at eaque
+                        quos voluptatem tempora nisi aperiam quaerat repudiandae ut, dignissimos maiores, ducimus
+                        qui esse corrupti, fugiat quidem.</p>
+                </div>
+            </div>
+        </div>
+        </div>
 
-    <script>
-
-        var sidemenu = document.getElementById("sidemenu");
-
-        function openmenu() {
-            sidemenu.style.right = "0";
-        }
-        function closemenu() {
-            sidemenu.style.right = "-200px"
-        }
-
-    </script>
-
+    </section>
 
 </body>
 
