--- a/index2.html
+++ b/index2.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eddy Website</title>
 
+    <link rel="shortcut icon" href="./images/logo2.png">
+
     <!-- Google Fonts style -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,44 +23,61 @@
         <img src="./images/logo.png" class="logo">
         <ul id="sidemenu">
             <li><a href="index.html">Home</a></li>
-            <li><a href="portfolio.html">about</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="skill.html">Skill</a></li>
             <li><a href="blog.html">Blog</a></li>
-            <li><a href="skill.html">skill</a></li>
             <li><a href="contact.html">Contact</a></li>
             <i class="fas fa-sharp fa-solid fa-xmark" onclick="closemenu()"></i>
         </ul>
         <i class="fas fa-solid fa-bars" onclick="openmenu()"></i>
     </nav>
-
-    <!------------------------------------contact----------------------------------->
-
-    <div id="contact">
+    <div id="header">
         <div class="container">
-            <div class="row">
-                <div class="contact-left">
-                    <h1 class="sub-title">Contact Me</h1>
-                    <p><i class="fa-solid fa-envelope"></i>22026266d@connect.polyu.hk</p>
-                    <p><i class="fa-solid fa-phone"></i> (852) 9716 6524</p>
-                    <div class="social-icons">
-                        <a href=""><i class="fa-brands fa-square-facebook"></i></a>
-                        <a href=""><i class="fa-brands fa-linkedin"></i></i></a>
-                        <a href=""><i class="fa-brands fa-square-instagram"></i></i></a>
+            <div class="header-content">
+                <div class="header-text">
+                    <div class="moblie-icon">
+                        <img src="./images/me.png" alt="logo-myself">
                     </div>
-                    <a href="images/PortfolioResume.pdf" download class="btn btn2">Button</a>
+                    <p>HI! I'M</p>
+                    <h1>Eddy<br>CHAN</h1>
+                    <p>WEB DESIGNER / UX DESIGNER</p>
+
+
                 </div>
-                <div class="contact-right">
-                    <form>
-                        <input type="text" name="Name" placeholder="Your Name" required>
-                        <input type="email" name="email" placeholder="Your Email" required>
-                        <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
-                        <button type="submit" class="btn btn2">SEND MESSAGE</button>
-                    </form>
+                <div class="header-img">
+                    <img src="./images/me.png" alt="logo-myself">
                 </div>
             </div>
         </div>
-        <div class="copyright">
-            <p>Footer</p>
+    </div>
+
+    <!----------------------------Quotes--------------------------------------------->
+
+    <div id="portfolio">
+        <div class="container">
+            <h1 class="sub-title">Quotes</h1>
+            <div class="work-list">
+                <div class="work">
+
+                    <img src="./images/bgc2.png">
+                    <div class="layer">
+                        <h3>test1</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos molestiae ab omnis quam
+                            perferendis? Libero incidunt harum officiis explicabo cumque. Hic, voluptates? Sunt illo
+                            ad
+                            vero, nesciunt odio laudantium qui.</p>
+                        <a href="#"><i class="fa-sharp fa-solid fa-link"></i></a>
+                    </div>
+                </div>
+            </div>
+            <a href="#" class="btn">SEE MORE</a>
         </div>
+    </div>
+
+    <!----------------------------------Footer--------------------------------------------->
+    <div class="copyright">
+        <p>Nice to meet you!</p>
+    </div>
     </div>
 
     <script>
@@ -88,6 +107,19 @@
         }
         function closemenu() {
             sidemenu.style.right = "-200px"
+        }
+
+
+
+        window.onscroll = function () { myFunction() };
+
+        var navbar = document.getElementById("test");
+        var sticky = navbar.offsetTop;
+
+        function myFunction() {
+            if (window.pageYOffset >= sticky) {
+                navbar.classList.add("sticky")
+            }
         }
 
     </script>
