--- a/skill.html
+++ b/skill.html
@@ -31,77 +31,102 @@
         </ul>
         <i class="fas fa-solid fa-bars" onclick="openmenu()"></i>
     </nav>
+
     <section id="skill">
+
         <div class="inner">
             <div class="skill-header">
-                <h1>First H1</h1>
+                <h1>My page used Skill</h1>
             </div>
             <div class="skill-container">
                 <div class="skill-box">
                     <div class="skill-title">
                         <div class="skill-img">
-                            <img src="./images/bgc-9.png" alt="skill1" class="skill-icon">
+                            <img src="./images/html.webp" alt="skill1" class="skill-icon">
                         </div>
                         <h3>HTML 5</h3>
                     </div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus a voluptatibus veniam at eaque
-                        quos voluptatem tempora nisi aperiam quaerat repudiandae ut, dignissimos maiores, ducimus
-                        qui esse corrupti, fugiat quidem.</p>
+                    <div class="skill-text">
+                        <p>Shaping the website structure and content. Through HTML, I arrange text, images, and links,
+                            crafting the site's layout and ensuring it's informative and user-friendly. </p>
+                    </div>
+
                 </div>
                 <div class="skill-box">
                     <div class="skill-title">
                         <div class="skill-img">
-                            <img src="./images/bgc-9.png" alt="skill1" class="skill-icon">
+                            <img src="./images/css.webp" alt="skill1" class="skill-icon">
                         </div>
-                        <h3>HTML 5</h3>
+                        <h3>CSS 3</h3>
                     </div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus a voluptatibus veniam at eaque
-                        quos voluptatem tempora nisi aperiam quaerat repudiandae ut, dignissimos maiores, ducimus
-                        qui esse corrupti, fugiat quidem.</p>
+                    <div class="skill-text">
+                        <p>Leveraging CSS skills, I've designed my website with style and responsiveness, enhancing its
+                            layout, color scheme, and user interface for an appealing and efficient user experience.</p>
+                    </div>
+
                 </div>
                 <div class="skill-box">
                     <div class="skill-title">
                         <div class="skill-img">
-                            <img src="./images/bgc-9.png" alt="skill1" class="skill-icon">
+                            <img src="./images/js.webp" alt="skill1" class="skill-icon">
                         </div>
-                        <h3>HTML 5</h3>
+                        <h3>JavaSscipt</h3>
                     </div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus a voluptatibus veniam at eaque
-                        quos voluptatem tempora nisi aperiam quaerat repudiandae ut, dignissimos maiores, ducimus
-                        qui esse corrupti, fugiat quidem.</p>
+                    <div class="skill-text">
+                        <p>Using JavaScript, I've added interactivity and dynamic content to my website, enabling
+                            real-time
+                            updates, interactive features, and enhanced user engagement. This programming language has
+                            transformed the site into a vibrant, responsive, and interactive platform.</p>
+                    </div>
+
                 </div>
                 <div class="skill-box">
                     <div class="skill-title">
                         <div class="skill-img">
-                            <img src="./images/bgc-9.png" alt="skill1" class="skill-icon">
+                            <img src="./images/responsive.png" alt="skill1" class="skill-icon">
                         </div>
-                        <h3>HTML 5</h3>
+                        <h3>Response design</h3>
                     </div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus a voluptatibus veniam at eaque
-                        quos voluptatem tempora nisi aperiam quaerat repudiandae ut, dignissimos maiores, ducimus
-                        qui esse corrupti, fugiat quidem.</p>
+                    <div class="skill-text">
+                        <p>Responsive design ensures my website adapts seamlessly to different screen sizes and devices,
+                            providing an optimal viewing experience through flexible layouts, images, and CSS media
+                            queries.
+                            This approach enhances usability and accessibility, making the site user-friendly across all
+                            platforms.</p>
+                    </div>
+
                 </div>
                 <div class="skill-box">
                     <div class="skill-title">
                         <div class="skill-img">
-                            <img src="./images/bgc-9.png" alt="skill1" class="skill-icon">
+                            <img src="./images/appscript.png" alt="skill1" class="skill-icon">
                         </div>
-                        <h3>HTML 5</h3>
+                        <h3>AppScript</h3>
                     </div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus a voluptatibus veniam at eaque
-                        quos voluptatem tempora nisi aperiam quaerat repudiandae ut, dignissimos maiores, ducimus
-                        qui esse corrupti, fugiat quidem.</p>
+                    <div class="skill-text">
+                        <p>I've used Google Apps Script to seamlessly integrate my website's contact form with Google
+                            Sheets, automating the process of capturing and storing submissions directly into a
+                            spreadsheet,enhances data management and accessibility, streamlining communication and
+                            response
+                            efficiency.</p>
+                    </div>
+
                 </div>
                 <div class="skill-box">
                     <div class="skill-title">
                         <div class="skill-img">
-                            <img src="./images/bgc-9.png" alt="skill1" class="skill-icon">
+                            <img src="./images/tjs.png" alt="skill1" class="skill-icon">
                         </div>
-                        <h3>HTML 5</h3>
+                        <h3>TypedScript</h3>
                     </div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus a voluptatibus veniam at eaque
-                        quos voluptatem tempora nisi aperiam quaerat repudiandae ut, dignissimos maiores, ducimus
-                        qui esse corrupti, fugiat quidem.</p>
+                    <div class="skill-text">
+                        <p>I've employed TypeScript to implement captivating text animations on my website, leveraging
+                            its
+                            strong typing and advanced JavaScript features. This approach has significantly enhanced the
+                            site's interactivity and visual appeal, offering users a dynamic and engaging browsing
+                            experience.</p>
+                    </div>
+
                 </div>
             </div>
         </div>
