responsive of about.html finished

--- a/about.html
+++ b/about.html
@@ -36,14 +36,16 @@
         <div class="container">
             <div class="row">
                 <div class="about-col-1">
-                    <img src="./images/bgc.png">
+                    <img src="./images/about-me.png">
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam molestias quo debitis velit.
-                        Minus, error? Dolore et exercitationem, autem cumque ipsa aperiam quod, laboriosam voluptas
-                        aliquid, illo voluptatibus assumenda unde!</p>
-                    <br><br>
+                    <div class="about-text">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam molestias quo debitis
+                            velit.
+                            Minus, error? Dolore et exercitationem, autem cumque ipsa aperiam quod, laboriosam voluptas
+                            aliquid, illo voluptatibus assumenda unde!</p>
+                    </div>
                     <div class="tab">
                         <div class="tab-titles">
                             <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
@@ -87,7 +89,7 @@
                             </ul>
                         </div>
                     </div>
-                    <a href="#" download class="btn btn2">BUTTON</a>
+                    <a href="./blog.html" class="btn btn2">View My Blog</a>
                 </div>
             </div>
         </div>
