--- a/blog.html
+++ b/blog.html
@@ -22,7 +22,7 @@
         <img src="./images/logo.png" class="logo">
         <ul id="sidemenu">
             <li><a href="index.html">Home</a></li>
-            <li><a href="portfolio.html">about</a></li>
+            <li><a href="about.html">about</a></li>
             <li><a href="blog.html">Blog</a></li>
             <li><a href="skill.html">skill</a></li>
             <li><a href="contact.html">Contact</a></li>
@@ -129,7 +129,7 @@
             </div>
             <div class="blog-box">
                 <div class="blog-img">
-                    <img width="500" src="./images/bgc-2.png" alt="">
+                    <img width="500" src="./images/bgc-5.png" alt="">
                 </div>
                 <div class="blog-text">
                     <span>5-2 Feb 2024 / Web design and application</span>
@@ -148,7 +148,7 @@
             </div>
             <div class="blog-box">
                 <div class="blog-img">
-                    <img width="500" src="./images/bgc-2.png" alt="">
+                    <img width="500" src="./images/bgc-6.png" alt="">
                 </div>
                 <div class="blog-text">
                     <span>5-2 Feb 2024 / Web design and application</span>
@@ -167,26 +167,7 @@
             </div>
             <div class="blog-box">
                 <div class="blog-img">
-                    <img width="500" src="./images/bgc-2.png" alt="">
-                </div>
-                <div class="blog-text">
-                    <span>5-2 Feb 2024 / Web design and application</span>
-                    <a href="#" class="blog-title">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci
-                        tenetur maiores
-                        delectus </a>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione dolor debitis, velit nisi et,
-                        necessitatibus ducimus sunt recusandae voluptate alias neque enim error ab, possimus odit animi
-                        maxime nam deleniti!
-                    </p>
-
-                    <b class="read-more">Read More</b><br>
-                    <span class="read-little">Read Little</span>
-                </div>
-            </div>
-            <div class="blog-box">
-                <div class="blog-img">
-                    <img width="500" src="./images/bgc-2.png" alt="">
+                    <img width="500" src="./images/bgc-7.png" alt="">
                 </div>
                 <div class="blog-text">
                     <span>5-2 Feb 2024 / Web design and application</span>
