--- a/skill.html
+++ b/skill.html
@@ -85,7 +85,7 @@
                         <div class="skill-img">
                             <img src="./images/responsive.png" alt="skill1" class="skill-icon">
                         </div>
-                        <h3>Response design</h3>
+                        <h3>Responsive</h3>
                     </div>
                     <div class="skill-text">
                         <p>Responsive design ensures my website adapts seamlessly to different screen sizes and devices,
