edited contact.htmll's css

--- a/contact.html
+++ b/contact.html
@@ -45,31 +45,24 @@
                         <a href=""><i class="fa-brands fa-linkedin"></i></i></a>
                         <a href=""><i class="fa-brands fa-square-instagram"></i></i></a>
                     </div>
-                    <a href="images/PortfolioResume.pdf" download class="btn btn2">Button</a>
+
                 </div>
                 <div class="contact-right">
 
                     <form name="submit-to-google-sheet">
-                        <input type="text" name="Name" placeholder="Your Name" required>
-                        <input type="email" name="Email" placeholder="Your Email" required>
-                        <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
-                        <button type="submit" class="btn btn2">SEND MESSAGeE</button>
+                        <input type="text" name="Name" placeholder="Enter Your Name..." required>
+                        <input type="email" name="Email" placeholder="Enter Your Email..." required>
+                        <textarea name="Message" rows="3" placeholder="Enter Your Message..."></textarea>
+                        <button type="submit" class="btn btn2">SEND MESSAGE</button>
                     </form>
 
                 </div>
             </div>
         </div>
-        <div class="copyright">
-            <p>Footer</p>
-        </div>
+
     </div>
-
-
-
     <script>
-
         var sidemenu = document.getElementById("sidemenu");
-
         function openmenu() {
             sidemenu.style.right = "0";
         }
@@ -77,10 +70,6 @@
             sidemenu.style.right = "-200px"
         }
 
-    </script>
-
-
-    <script>
         const scriptURL = 'https://script.google.com/macros/s/AKfycby9r2hHHSwgin5iMaKXL12oZ7qn4Nfr2luh-K_iqJb6dAXw0_cQA5-H_MytX4B2Mg/exec';
         const form = document.forms['submit-to-google-sheet'];
 
