--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
     <nav>
         <img src="./images/logo.png" class="logo">
         <ul id="sidemenu">
-            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="skill.html">Skill</a></li>
             <li><a href="blog.html">Blog</a></li>
@@ -40,9 +39,9 @@
                     </div>
                     <p>HI! I'M</p>
                     <h1>Eddy<br>CHAN</h1>
-                    <p>WEB DESIGNER / UX DESIGNER</p>
-
-
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, eum aspernatur. Ad ipsam, magni
+                        rem accusantium laborum, illo nostrum eligendi debitis eaque, molestias quis obcaecati
+                        praesentium? Incidunt suscipit enim a.</p>
                 </div>
                 <div class="header-img">
                     <img src="./images/me.png" alt="logo-myself">
