--- a/duty.html
+++ b/duty.html
@@ -6,20 +6,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Duty</title>
 </head>
+<style>
+    .duty {
+        display: flex;
+        height: 100vh;
+        justify-content: center;
+        align-items: center;
+    }
+
+    h1 {
+        font-size: 3rem;
+        text-align: center;
+    }
+</style>
 
 <body>
-    <h1>Duty!</h1>
 
-    <pre>
-       duty:
-            all - Fontsize
 
-            index - content/css/responsive/Quotes/typedJS
-            about - content/css/responsive/typedJS
-            blog - shadow
-            skill - Completed
-            contact  - Completed
-    </pre>
+
+    <div class="duty">
+        <div>
+            <h2>all - Fontsize</h2>
+            <h2> navbar - responsive</h2>
+            <h2> index - content/css/responsive/Quotes/typedJS </h2>
+            <h2> about - content/css/responsive/typedJS </h2>
+            <h2> blog - shadow </h2>
+            <h2 skill - Completed </p>
+                <h2> contact - Completed</h2>
+
+        </div>
+    </div>
 </body>
 
 </html>
