--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
         <img src="./images/logo.png" class="logo">
         <ul id="sidemenu">
             <li><a href="index.html">Home</a></li>
-            <li><a href="portfolio.html">about</a></li>
+            <li><a href="about.html">about</a></li>
             <li><a href="blog.html">Blog</a></li>
             <li><a href="skill.html">skill</a></li>
             <i class="fas fa-sharp fa-solid fa-xmark" onclick="closemenu()"></i>
