remove some useless stuff

--- a/about.html
+++ b/about.html
@@ -88,7 +88,7 @@
                             </ul>
                         </div>
                     </div>
-                    <a href="./blog.html" class="btn btn2">View My Blog</a>
+                    <a href="./blog.html" class="btn btn2">Discover more</a>
                 </div>
             </div>
         </div>
@@ -123,19 +123,6 @@
         }
         function closemenu() {
             sidemenu.style.right = "-200px"
-        }
-
-
-
-        window.onscroll = function () { myFunction() };
-
-        var navbar = document.getElementById("test");
-        var sticky = navbar.offsetTop;
-
-        function myFunction() {
-            if (window.pageYOffset >= sticky) {
-                navbar.classList.add("sticky")
-            }
         }
 
     </script>
