--- a/duty.html
+++ b/duty.html
@@ -26,8 +26,9 @@
 
     <div class="duty">
         <div>
-            <h2>all - Fontsize</h2>
-            <h2> navbar - responsive</h2>
+            <h1>all - Fontsize</h1>
+            <h1>Button</h1>
+            <h2> navbar - stlye</h2>
             <h2> index - content/css/responsive/Quotes/typedJS </h2>
             <h2> about - content/css/responsive/typedJS </h2>
             <h2> blog - shadow </h2>
