about.html uncompleted fontsize

--- a/about.html
+++ b/about.html
@@ -38,8 +38,9 @@
                     <img src="./images/about-me.png">
                 </div>
                 <div class="about-col-2">
-                    <h1 class="sub-title">About Me</h1>
+                    <h1 class="sub-title" id="about-me-header">About Me</h1>
                     <div class="about-text">
+                        <div></div>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam molestias quo debitis
                             velit.
                             Minus, error? Dolore et exercitationem, autem cumque ipsa aperiam quod, laboriosam voluptas
@@ -53,36 +54,57 @@
                         </div>
                         <div class="tab-contents active-tab" id="skills">
                             <ul>
-                                <li><span>Web Design</span><br>Designing Web Interfaces</li>
-                                <li><span>Web Design</span><br>Designing Web Interfaces</li>
-                                <li><span>Web Design</span><br>Designing Web Interfaces</li>
+                                <li>
+                                    <span>Web Design</span>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In quasi magnam cum
+                                        debitis neque iste laboriosam facere dicta fugit eaque sit architecto, et ut
+                                        est
+                                        odio quibusdam accusamus. Amet, ullam!
+                                    </p>
+                                </li>
+                                <li><span>Web Design</span>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In quasi magnam cum
+                                        debitis neque iste laboriosam facere dicta fugit eaque sit architecto, et ut est
+                                        odio quibusdam accusamus. Amet, ullam!</p>
+                                </li>
+                                <li><span>Web Design</span>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In quasi magnam cum
+                                        debitis neque iste laboriosam facere dicta fugit eaque sit architecto, et ut est
+                                        odio quibusdam accusamus. Amet, ullam!</p>
+                                </li>
 
                             </ul>
                         </div>
                         <div class="tab-contents" id="experience">
                             <ul>
                                 <li>
-                                    <span>2023 - Current</span><br>Web Designer at Autoshop Solutions
+                                    <span>2023 - Current</span>
+                                    <p>Web Designer at Autoshop Solutions</p>
                                 </li>
                                 <li>
-                                    <span>2023 - Current</span><br>Web Designer at Autoshop Solutions
+                                    <span>2023 - Current</span>
+                                    <p>Web Designer at Autoshop Solutions</p>
                                 </li>
                                 <li>
-                                    <span>2023 - Current</span><br>Web Designer at Autoshop Solutions
+                                    <span>2023 - Current</span>
+                                    <p>Web Designer at Autoshop Solutions</p>
                                 </li>
                             </ul>
                         </div>
                         <div class="tab-contents" id="education">
                             <ul>
                                 <li>
-                                    <span>2023</span><br>Associate in UX Design
+                                    <span>2023</span>
+                                    <p>Associate in UX Design</p>
                                 </li>
                                 <li>
-                                    <span>2023</span><br>Associate in Web Design
+                                    <span>2023</span>
+                                    <p>Associate in Web Design</p>
                                 </li>
 
                                 <li>
-                                    <span>2017</span><br>Associate in Business Administration
+                                    <span>2017</span>
+                                    <p>Associate in Business Administration</p>
                                 </li>
 
                             </ul>
